--- a/node-mocha-should/package.json
+++ b/node-mocha-should/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha",
     "test": "./node_modules/.bin/_mocha",
     "test123": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "mocha": "^6.2.2",
     "should": "^13.2.3"
   },
